--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,13 +5,13 @@ resources:
 
 namespace: staging
 
-patchesJson6902:
-- target:
-    group: networking.k8s.io
-    version: v1
-    kind: Ingress
-    name: project-ingress
-  path: ingress.yaml
+# patchesJson6902:
+# - target:
+#     group: networking.k8s.io
+#     version: v1
+#     kind: Ingress
+#     name: project-ingress
+#   path: ingress.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
