--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
@@ -6,8 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: base
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
