--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: project
   name: project-ingress
 spec:
-  # ingressClassName: nginx
+  ingressClassName: nginx
   rules:
   - http:
       paths:
