--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,6 +5,9 @@ resources:
 
 namespace: staging
 
+patchesStrategicMerge:
+  - ingress.yaml
+
 images:
 - name: IMAGE/CRONJOB-TODO
   newName: sushashu/todo-job
