--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
 
 namespace: staging
 
-patchesStrategicMerge:
-  - ingress.yaml
+patches:
+  - path: ingress.yaml
 
 images:
 - name: IMAGE/CRONJOB-TODO
