--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -9,6 +9,9 @@ namespace: production
 patches:
   - path: deployment-broadcast.yaml
   - path: ingress.yaml
+    target:
+      kind: Ingress
+      name: project-ingress
 
 images:
 - name: IMAGE/CRONJOB-TODO
