--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
@@ -4,5 +4,5 @@ metadata:
   name: production-project-ingress
   namespace: production
 spec:
-  # ingressClassName: nginx
+  ingressClassName: nginx-production
   # loadBalancerIP: 10.0.0.1
