--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
@@ -4,5 +4,5 @@ metadata:
   name: staging-project-ingress
   namespace: staging
 spec:
-  # ingressClassName: nginx
+  ingressClassName: nginx-staging
   # loadBalancerIP: 10.0.0.2
