--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -5,11 +5,11 @@ resources:
 
 namespace: staging
 
-# patches:
-#   - path: ingress.yaml
-#     target:
-#       kind: Ingress
-#       name: project-ingress
+patches:
+  - path: ingress.yaml
+    target:
+      kind: Ingress
+      name: project-ingress
 
 images:
 - name: IMAGE/CRONJOB-TODO
