--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: staging-project-ingress
   namespace: staging
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.provider: nginx
 spec:
   ingressClassName: nginx-staging
   # loadBalancerIP: 10.0.0.2
