--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
@@ -3,8 +3,10 @@ kind: Ingress
 metadata:
   namespace: project
   name: project-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
-  # ingressClassName: nginx
+  ingressClassName: nginx
   rules:
   - http:
       paths:
