--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: production-project-ingress
   namespace: production
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.provider: nginx
 spec:
   ingressClassName: nginx-production
   # loadBalancerIP: 10.0.0.1
