--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
@@ -7,5 +7,5 @@ metadata:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/ingress.provider: nginx
 spec:
-  ingressClassName: nginx
+  ingressClassName: nginx-prod
   # loadBalancerIP: 10.0.0.1
