ingressClass in staging?

--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: project-ingress
   namespace: staging
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx-staging
     kubernetes.io/ingress.provider: nginx
 spec:
   ingressClassName: nginx-staging
