--- a/Part4/Exercise4.08/manifests-overlays/base/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
 - manifests/persistentvolumeclaim-db.yaml
 - manifests/persistentvolumeclaim.yaml
 - manifests/statefulset-todos-db.yaml
+- manifests/ingressclass.yaml
