--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -9,10 +9,10 @@ namespace: production
 
 patches:
 - path: deployment-broadcast.yaml
-- path: ingress.yaml
-  target:
-    kind: Ingress
-    name: project-ingress
+# - path: ingress.yaml
+#   target:
+#     kind: Ingress
+#     name: project-ingress
 
 images:
 - name: IMAGE/BROADCASTER
