--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/ingressclass.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/ingressclass.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: IngressClass
 metadata:
   name: nginx-prod
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
   controller: k8s.io/ingress-nginx
   scope: Namespace
