--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingressclass.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingressclass.yaml
@@ -6,4 +6,4 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   controller: k8s.io/ingress-nginx
-  scope: Namespace
+  # scope: Namespace
