--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: production
   annotations:
     kubernetes.io/ingress.class: nginx-prod
-    kubernetes.io/ingress.provider: nginx
-spec:
-  ingressClassName: nginx-prod
+#     kubernetes.io/ingress.provider: nginx
+# spec:
+#   ingressClassName: nginx-prod
   # loadBalancerIP: 10.0.0.1
