--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: staging
   annotations:
     kubernetes.io/ingress.class: nginx-staging
-    kubernetes.io/ingress.provider: nginx
-spec:
-  ingressClassName: nginx-staging
+    # kubernetes.io/ingress.provider: nginx
+# spec:
+#   ingressClassName: nginx-staging
   # loadBalancerIP: 10.0.0.2
