--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -3,16 +3,16 @@ kind: Kustomization
 resources:
 - ./../../base
 - cronjob-db-backup.yaml
-- ingressclass.yaml
+# - ingressclass.yaml
 
 namespace: production
 
 patches:
 - path: deployment-broadcast.yaml
-- path: ingress.yaml
-  target:
-    kind: Ingress
-    name: project-ingress
+# - path: ingress.yaml
+#   target:
+#     kind: Ingress
+#     name: project-ingress
 
 images:
 - name: IMAGE/BROADCASTER
