--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   # annotations:
   #   kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: nginx-public
+  # ingressClassName: nginx-public
   rules:
   - http:
       paths:
