--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim-db.yaml
@@ -5,7 +5,7 @@ metadata:
   name: somedata-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 100Mi
