--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   # storageClassName: files-project-pv
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
