testing with prefixes

--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim-db.yaml
@@ -29,6 +29,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: somedata-pvc
+  namespace: project
 spec:
   accessModes:
     - ReadWriteMany
