--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/persistentvolumeclaim.yaml
@@ -30,6 +30,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: project-claim
+  namespace: project
 spec:
   accessModes:
     - ReadWriteMany
