--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -11,6 +11,7 @@ namePrefix: prod-
 
 patches:
 - path: deployment-broadcast.yaml
+- path: dep-analysistemplate.yaml
 # - path: ingress.yaml
 #   target:
 #     kind: Ingress
