--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -8,7 +8,9 @@ namespace: staging
 
 namePrefix: staging-
 
-# patches:
+
+patches:
+  - path: dep-analysistemplate.yaml
 #   - path: ingress.yaml
 #     target:
 #       kind: Ingress
