--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   strategy:
     canary:
+      steps:
       - analysis:
           templates:
             - templateName: prod-cpu-usage-rate
