--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   namespace: project
-  name: project-dep
+  # name: project-dep
 spec:
   strategy:
     canary:
