--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -11,12 +11,13 @@ namePrefix: prod-
 
 patches:
   - path: deployment-broadcast.yaml
-  - path: dep-analysistemplate.yaml
-    target:
+  - target:
       name: project-dep
-  - path: dep-analysistemplate.yaml
-    target:
+    path: dep-analysistemplate.yaml
+  - target:
       name: todo-backend
+    path: dep-analysistemplate.yaml
+
 
 
 # - path: ingress.yaml
