--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -10,12 +10,12 @@ namePrefix: staging-
 
 
 patches:
-  - path: dep-analysistemplate.yaml
-    target:
+  - target:
       name: project-dep
-  - path: dep-analysistemplate.yaml
-    target:
+    path: dep-analysistemplate.yaml
+  - target:
       name: todo-backend
+    path: dep-analysistemplate.yaml
 #   - path: ingress.yaml
 #     target:
 #       kind: Ingress
