--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -11,12 +11,8 @@ namePrefix: prod-
 
 patches:
   - path: deployment-broadcast.yaml
-  - target:
-      name: project-dep
-    path: dep-analysistemplate.yaml
-  - target:
-      name: todo-backend
-    path: dep-analysistemplate.yaml
+  - path: dep-analysistemplate-front.yaml
+  - path: dep-analysistemplate-back.yaml
 
 
 
