--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-back.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-back.yaml
@@ -2,11 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   namespace: project
-  # name: project-dep
+  name: todo-backend-dep
 spec:
   strategy:
     canary:
       steps:
       - analysis:
           templates:
-            - templateName: staging-cpu-usage-rate
+            - templateName: prod-cpu-usage-rate
