--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   namespace: project
-  # name: project-dep
+  name: todo-backend-dep
 spec:
   strategy:
     canary:
