--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/kustomization.yaml
@@ -10,12 +10,8 @@ namePrefix: staging-
 
 
 patches:
-  - target:
-      name: project-dep
-    path: dep-analysistemplate.yaml
-  - target:
-      name: todo-backend
-    path: dep-analysistemplate.yaml
+  - path: dep-analysistemplate-front.yaml
+  - path: dep-analysistemplate-back.yaml
 #   - path: ingress.yaml
 #     target:
 #       kind: Ingress
