--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
@@ -7,6 +7,12 @@ spec:
   strategy:
     canary:
       steps:
+      - setWeight: 25
+      - pause:
+          duration: 30s
+      - setWeight: 50
+      - pause:
+          duration: 30s
       - analysis:
           templates:
             - templateName: prod-cpu-usage-rate
