--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/dep-analysistemplate-back.yaml
@@ -15,4 +15,4 @@ spec:
           duration: 30s
       - analysis:
           templates:
-            - templateName: prod-cpu-usage-rate
+            - templateName: staging-cpu-usage-rate
