pvc claimName fix ..

--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-front.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-front.yaml
@@ -16,3 +16,12 @@ spec:
       - analysis:
           templates:
             - templateName: prod-cpu-usage-rate
+  template:
+    metadata:
+      labels:
+        app: project
+    spec:
+      volumes:
+        - name: files-storage
+          persistentVolumeClaim:
+            claimName: prod-project-claim
