--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/statefulset-todos-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/statefulset-todos-db.yaml
@@ -17,4 +17,4 @@ spec:
       volumes:
         - name: somedata
           persistentVolumeClaim:
-            claimName: staging-somedata-pvc
+            claimName: prod-somedata-pvc
