--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-front.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-front.yaml
@@ -25,3 +25,15 @@ spec:
         - name: files-storage
           persistentVolumeClaim:
             claimName: prod-project-claim
+      containers:
+        - name: project
+          imagePullPolicy: Always
+          image: IMAGE/PROJECT
+          volumeMounts:
+          - name: files-storage
+            mountPath: /usr/src/app/files
+          env:
+            - name: PORT
+              value: "3000"
+            - name: DBREADY_URL
+              value: "http://prod-todo-backend-svc:1234/todos"
