--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/deployment-project.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/deployment-project.yaml
@@ -39,6 +39,8 @@ spec:
           env:
             - name: PORT
               value: "3000"
+            - name: DBREADY_URL
+              value: "http://todo-backend-svc:1234/todos"
           readinessProbe:
             initialDelaySeconds: 10
             periodSeconds: 5
