--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 resources:
 - ./../../base
 - cronjob-db-backup.yaml
+- persistentvolumeclaim-db.yaml
+- persistentvolumeclaim.yaml
 # - ingressclass.yaml
 
 namespace: production
