--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
@@ -20,6 +20,7 @@ spec:
     storage: 100Mi
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Recycle
   nfs:
     server: nfs-server-prod.nfs-server.svc.cluster.local
     path: "/"
