--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim.yaml
@@ -22,8 +22,8 @@ spec:
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Recycle
-  mountOptions:
-    - nfsvers=4.1
+  # mountOptions:
+  #   - nfsvers=4.1
   nfs:
     server: nfs-server-prod.nfs-server.svc.cluster.local
     path: "/"
