--- a/Part4/Exercise4.08/manifests-overlays/base/manifests/analysistemplate.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/base/manifests/analysistemplate.yaml
@@ -7,7 +7,7 @@ spec:
   metrics:
   - name: cpu-usage-rate
     initialDelay: 10m
-    successCondition: result[0] < 0.5
+    successCondition: result < 0.5
     provider:
       prometheus:
         address: http://kube-prometheus-stack-1721-prometheus.prometheus.svc.cluster.local:9090
