reorganizing without prefix

--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/kustomization.yaml
@@ -9,12 +9,13 @@ resources:
 
 namespace: production
 
-namePrefix: prod-
+# namePrefix: prod-
 
 patches:
+- path: analysistemplate.yaml
 - path: deployment-broadcast.yaml
 - path: dep-analysistemplate-front.yaml
-- path: dep-analysistemplate-back.yaml
+# - path: dep-analysistemplate-back.yaml
 - path: statefulset-todos-db.yaml
 
 # - path: ingress.yaml
