--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
@@ -30,7 +30,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: somedata-pvc
-  namespace: project
+  namespace: production
 spec:
   accessModes:
     - ReadWriteMany
