--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/statefulset-todos-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/statefulset-todos-db.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  namespace: project
+  namespace: production
   name: todo-db-stset
 spec:
   serviceName: todo-db-svc
