--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim-db.yaml
@@ -13,8 +13,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: somedata-pvc
-  namespace: project
+  name: staging-somedata-pvc
+  namespace: staging
 spec:
   capacity:
     storage: 100Mi
@@ -28,8 +28,8 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: somedata-pvc
-  namespace: project
+  name: staging-somedata-pvc
+  namespace: staging
 spec:
   accessModes:
     - ReadWriteMany
