--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim.yaml
@@ -14,8 +14,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: project-claim
-  namespace: project
+  name: staging-project-claim
+  namespace: staging
 spec:
   capacity:
     storage: 100Mi
@@ -29,8 +29,8 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: project-claim
-  namespace: project
+  name: staging-project-claim
+  namespace: staging
 spec:
   accessModes:
     - ReadWriteMany
