--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
@@ -13,8 +13,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: somedata-pvc
-  namespace: project
+  name: prod-somedata-pvc
+  namespace: production
 spec:
   capacity:
     storage: 100Mi
@@ -29,7 +29,7 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: somedata-pvc
+  name: prod-somedata-pvc
   namespace: production
 spec:
   accessModes:
