--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim.yaml
@@ -14,8 +14,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: project-claim
-  namespace: project
+  name: prod-project-claim
+  namespace: production
 spec:
   capacity:
     storage: 100Mi
@@ -32,7 +32,7 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: project-claim
+  name: prod-project-claim
   namespace: production
 spec:
   accessModes:
