--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim.yaml
@@ -26,7 +26,7 @@ spec:
   #   - nfsvers=4.1
   nfs:
     server: nfs-server-prod.nfs-server.svc.cluster.local
-    path: "/"
+    path: "/abc"
 
 ---
 kind: PersistentVolumeClaim
