--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim.yaml
@@ -23,7 +23,7 @@ spec:
     - ReadWriteMany
   nfs:
     server: nfs-server-staging.nfs-server.svc.cluster.local
-    path: "/efg"
+    path: "/data-staging"
 
 ---
 kind: PersistentVolumeClaim
