--- a/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/production/persistentvolumeclaim-db.yaml
@@ -23,7 +23,7 @@ spec:
   # persistentVolumeReclaimPolicy: Recycle
   nfs:
     server: nfs-server-prod.nfs-server.svc.cluster.local
-    path: "/abc"
+    path: "/data-prod"
 
 ---
 kind: PersistentVolumeClaim
