--- a/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim-db.yaml
+++ b/Part4/Exercise4.08/manifests-overlays/overlays/staging/persistentvolumeclaim-db.yaml
@@ -22,7 +22,7 @@ spec:
     - ReadWriteMany
   nfs:
     server: nfs-server-staging.nfs-server.svc.cluster.local
-    path: "/data-staging"
+    path: "/"
 
 ---
 kind: PersistentVolumeClaim
